modificaciones en las url para que funcionaran las imagenes y el css

--- a/pagina1.HTML
+++ b/pagina1.HTML
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="CSS/bootstrap.min.css">
-    <link rel="stylesheet" href="CSS/Inicio.css">
-    <link rel="stylesheet" href="CSS/pagina1.css">
+    <link rel="stylesheet" href="bootstrap.min.css">
+    <link rel="stylesheet" href="Inicio.css">
+    <link rel="stylesheet" href="pagina1.css">
 </head>
 <body id="todo">
     <div class="container">
@@ -14,10 +14,10 @@
             <aside class="col-lg-3">
                 <nav id="nav">
                     <ul>
-                        <li><img src="img/cohete (2).png" alt=""><a href="index.html">Inicio</a></li>
-                        <li><img src="Img/usuario.png"><a href="pagina1.HTML">Pagina 1</a></li>
-                        <li><img src="Img/casa.png" alt=""><a href="pagina2.HTML">Pagina 2</a></li>
-                        <li><img src="Img/me-gusta.png" alt=""><a href="pagina3.HTML">Pagina 3</a></li>
+                        <li><img src="cohete (2).png" alt=""><a href="index.html">Inicio</a></li>
+                        <li><img src="usuario.png"><a href="pagina1.HTML">Pagina 1</a></li>
+                        <li><img src="casa.png" alt=""><a href="pagina2.HTML">Pagina 2</a></li>
+                        <li><img src="me-gusta.png" alt=""><a href="pagina3.HTML">Pagina 3</a></li>
                     </ul>
                 </nav>
             </aside>
@@ -27,13 +27,13 @@
                 <div id="carouselExample" class="carousel slide">
                     <div class="carousel-inner">
                       <div class="carousel-item active">
-                        <img src="img/loscaballeros-magicos-del-reino-del-trebol-3tebm5ug0tgy1ame.jpg" class="d-block w-100" alt="...">
+                        <img src="loscaballeros-magicos-del-reino-del-trebol-3tebm5ug0tgy1ame.jpg" class="d-block w-100" alt="...">
                       </div>
                       <div class="carousel-item">
-                        <img src="img/aspirandoa-los-mas-altos-objetivos-asta-de-los-caballeros-magicos-de-black-clover-3fxzklk78lp3kpt5.jpg" class="d-block w-100" alt="...">
+                        <img src="aspirandoa-los-mas-altos-objetivos-asta-de-los-caballeros-magicos-de-black-clover-3fxzklk78lp3kpt5.jpg" class="d-block w-100" alt="...">
                       </div>
                       <div class="carousel-item">
-                        <img src="img/demostremosnuestro-poder-asta-black-clover-50etesr1q874ecoh.jpg" class="d-block w-100" alt="...">
+                        <img src="demostremosnuestro-poder-asta-black-clover-50etesr1q874ecoh.jpg" class="d-block w-100" alt="...">
                       </div>
                     </div>
                     <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
@@ -49,7 +49,7 @@
                   <div class="m-3 row row-cols-1 row-cols-md-3 g-4">
                     <div class="col">
                       <div class="card h-100">
-                        <img src="img/aspirandoa-los-mas-altos-objetivos-asta-de-los-caballeros-magicos-de-black-clover-3fxzklk78lp3kpt5.jpg" class="card-img-top" alt="...">
+                        <img src="aspirandoa-los-mas-altos-objetivos-asta-de-los-caballeros-magicos-de-black-clover-3fxzklk78lp3kpt5.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
                           <h5 class="card-title">Asta</h5>
                           <ul>
@@ -63,7 +63,7 @@
                     </div>
                     <div class="col">
                       <div class="card h-100">
-                        <img src="img/demostremosnuestro-poder-asta-black-clover-50etesr1q874ecoh.jpg" class="card-img-top" alt="...">
+                        <img src="demostremosnuestro-poder-asta-black-clover-50etesr1q874ecoh.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
                           <h5 class="card-title">Yuno</h5>
                           <ul>
@@ -78,7 +78,7 @@
                     </div>
                     <div class="col">
                       <div class="card h-100">
-                        <img src="img/43801.jpg" class="card-img-top" alt="...">
+                        <img src="43801.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
                           <h5 class="card-title">Lucius Zogratis</h5>
                           <ul>
