--- a/pagina3.HTML
+++ b/pagina3.HTML
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="CSS/bootstrap.min.css">
-    <link rel="stylesheet" href="CSS/Inicio.css">
-    <link rel="stylesheet" href="CSS/pagina1.css">
+    <link rel="stylesheet" href="bootstrap.min.css">
+    <link rel="stylesheet" href="Inicio.css">
+    <link rel="stylesheet" href="pagina1.css">
 </head>
 <body id="todo">
     <div class="container">
@@ -14,10 +14,10 @@
             <aside class="col-lg-3">
                 <nav id="nav">
                     <ul>
-                        <li><img src="img/cohete (2).png" alt=""><a href="index.html">Inicio</a></li>
-                        <li><img src="Img/usuario.png"><a href="pagina1.HTML">Pagina 1</a></li>
-                        <li><img src="Img/casa.png" alt=""><a href="pagina2.HTML">Pagina 2</a></li>
-                        <li><img src="Img/me-gusta.png" alt=""><a href="pagina3.HTML">Pagina 3</a></li>
+                        <li><img src="cohete (2).png" alt=""><a href="index.html">Inicio</a></li>
+                        <li><img src="usuario.png"><a href="pagina1.HTML">Pagina 1</a></li>
+                        <li><img src="casa.png" alt=""><a href="pagina2.HTML">Pagina 2</a></li>
+                        <li><img src="me-gusta.png" alt=""><a href="pagina3.HTML">Pagina 3</a></li>
                     </ul>
                 </nav>
             </aside>
@@ -33,7 +33,7 @@
                       </h2>
                       <div id="panelsStayOpen-collapseOne" class="accordion-collapse collapse show">
                         <div class="accordion-body">
-                            <img src="img/Luciusrender.webp" alt="">
+                            <img src="Luciusrender.webp" alt="">
                           <strong>Lucius Zogratis</strong> es probablemente el personaje más poderoso del anime debido a que es casi invencible, pues domina la Magia de Tiempo, Magia del Alma, Magia de Gravedad y Magia de Cuerpo, Sangre y Huesos, siendo el único mago de controlar tantos tipos de magia. Por supuesto, esto también es gracias a que es poseído por el demonio Astaroth a su intelecto para manipular ataques a la perfección. Lo más increíble de todo esto es que también puede combinar los tipos de magia para hacer hechizos más complejos, cosa que nadie puede hacer tan bien como él.
                         </div>
                       </div>
@@ -46,7 +46,7 @@
                       </h2>
                       <div id="panelsStayOpen-collapseTwo" class="accordion-collapse collapse">
                         <div class="accordion-body">
-                            <img src="img/Asta.webp" alt="">
+                            <img src="Asta.webp" alt="">
                           <strong>Asta</strong> no podía faltar en esta lista y es que tras ser poseído por Liebe se convierte en uno de los más poderosos del reino. Pues bien, a diferencia de todos los demás es el único capaz de usar la Anti-Magia, una energía con la que puede anular la magia y también la usa para realizar ataques de impacto de gran madnitud. Con esto es posible combinar su Anti-Magia con la magia de otras personas para crear nuevos hechizos, siendo lo que lo vuelve muy versátil.
                         </div>
                       </div>
@@ -59,7 +59,7 @@
                       </h2>
                       <div id="panelsStayOpen-collapseThree" class="accordion-collapse collapse">
                         <div class="accordion-body">
-                            <img src="img/Lucifero_-moyai-.webp" alt="">
+                            <img src="Lucifero_-moyai-.webp" alt="">
                           <strong>Lucifero</strong> El mismísimo diablo de este universo es conocido como Lucifero, un ente que proviene del inframunto y que cuenta con un grimorio de cinco hojas que emplea para hacer Magia de Gravedad. Su manipulación gravitacional es ideal para enfrentar cualquier enemigo, a que puede someterlo a una presión inmensa o hacerlos levitar sin que puedan realizar movimientos. A su vez, esto le permite crear agujeros negros para ganar ventaja en los combates.
                         </div>
                       </div>
