--- a/pagina2.HTML
+++ b/pagina2.HTML
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="CSS/bootstrap.min.css">
-    <link rel="stylesheet" href="CSS/Inicio.css">
-    <link rel="stylesheet" href="CSS/pagina1.css">
+    <link rel="stylesheet" href="bootstrap.min.css">
+    <link rel="stylesheet" href="Inicio.css">
+    <link rel="stylesheet" href="pagina1.css">
 </head>
 <body id="todo">
     <div class="container">
@@ -14,10 +14,10 @@
             <aside class="col-lg-3">
                 <nav id="nav">
                     <ul>
-                        <li><img src="img/cohete (2).png" alt=""><a href="index.html">Inicio</a></li>
-                        <li><img src="Img/usuario.png"><a href="pagina1.HTML">Pagina 1</a></li>
-                        <li><img src="Img/casa.png" alt=""><a href="pagina2.HTML">Pagina 2</a></li>
-                        <li><img src="Img/me-gusta.png" alt=""><a href="pagina3.HTML">Pagina 3</a></li>
+                        <li><img src="cohete (2).png" alt=""><a href="index.html">Inicio</a></li>
+                        <li><img src="usuario.png"><a href="pagina1.HTML">Pagina 1</a></li>
+                        <li><img src="casa.png" alt=""><a href="pagina2.HTML">Pagina 2</a></li>
+                        <li><img src="me-gusta.png" alt=""><a href="pagina3.HTML">Pagina 3</a></li>
                     </ul>
                 </nav>
             </aside>
@@ -28,7 +28,7 @@
                 <div class="card mb-3" style="max-width: 540px;">
                     <div class="row g-0">
                       <div class="col-md-4">
-                        <img src="img/Black_Bull_Insignia.webp" class="img-fluid rounded-start" alt="...">
+                        <img src="Black_Bull_Insignia.webp" class="img-fluid rounded-start" alt="...">
                       </div>
                       <div class="col-md-8">
                         <div class="card-body">
@@ -43,7 +43,7 @@
                   <div class="row row-cols-1 row-cols-md-2 g-4">
                     <div class="col">
                       <div class="card">
-                        <img src="img/Golden_Dawn_Insignia.webp" class="card-img-top Caballeria" alt="...">
+                        <img src="Golden_Dawn_Insignia.webp" class="card-img-top Caballeria" alt="...">
                         <div class="card-body">
                           <h5 class="card-title">Amanecer Dorado</h5>
                           <p class="card-text">La mejor casa de caballeria y donde solo aceptan hijos de la realiza y bendecidos con el mana. <br><br>Capitan: Yuno</p>
@@ -52,7 +52,7 @@
                     </div>
                     <div class="col">
                       <div class="card">
-                        <img src="img/19-1.png" class="card-img-top Caballeria" alt="...">
+                        <img src="19-1.png" class="card-img-top Caballeria" alt="...">
                         <div class="card-body">
                           <h5 class="card-title">Aguilas Plateadas</h5>
                           <p class="card-text">Casa predilecta de los hermano Silva, de la misma manera solo aceptan de la realeza.<br><br>Capitan: Nozel Silva.</p>
@@ -61,7 +61,7 @@
                     </div>
                     <div class="col">
                       <div class="card">
-                        <img src="img/7-1.png" class="card-img-top Caballeria" alt="...">
+                        <img src="7-1.png" class="card-img-top Caballeria" alt="...">
                         <div class="card-body">
                           <h5 class="card-title">Rosas Azules</h5>
                           <p class="card-text">Casa en la cual solo aceptan mujeres, son de las mejores casas. <br><br>Capitan: Charlotte Roselei</p>
@@ -70,7 +70,7 @@
                     </div>
                     <div class="col">
                       <div class="card">
-                        <img src="img/9-1.png" class="card-img-top Caballeria" alt="...">
+                        <img src="9-1.png" class="card-img-top Caballeria" alt="...">
                         <div class="card-body">
                           <h5 class="card-title">Leones Carmesi</h5>
                           <p class="card-text">Casa predilecta para la familia real de los Vermillion, suelen ser usuario de magia de fuego. <br><br>Capitan: Fuegoleon Vermillion</p>
@@ -82,7 +82,7 @@
                   <div class="row row-cols-1 row-cols-md-2 g-4 ">
                     <div class="col">
                       <div class="card">
-                        <img src="img/Green_Mantis_Insignia.webp" class="card-img-top Caballeria" alt="...">
+                        <img src="Green_Mantis_Insignia.webp" class="card-img-top Caballeria" alt="...">
                         <div class="card-body">
                           <h5 class="card-title">Mantis Verdes</h5>
                           <p class="card-text">Casa donde usualmente hay magias raras, su capitan esta algo loco.<br><br>Capitan: Jack el Destripador</p>
@@ -91,7 +91,7 @@
                     </div>
                     <div class="col">
                       <div class="card">
-                        <img src="img/Azure_Deer_Insignia.webp" class="card-img-top Caballeria" alt="...">
+                        <img src="Azure_Deer_Insignia.webp" class="card-img-top Caballeria" alt="...">
                         <div class="card-body">
                           <h5 class="card-title">Ciervos Azules</h5>
                           <p class="card-text">Casa conocida por tener al capitan mas joven de todas las casas de Caballeria.<br><br>Capitan: Rill Boismortier</p>
@@ -100,7 +100,7 @@
                     </div>
                     <div class="col">
                       <div class="card">
-                        <img src="img/11-2.png" class="card-img-top Caballeria" alt="...">
+                        <img src="11-2.png" class="card-img-top Caballeria" alt="...">
                         <div class="card-body">
                           <h5 class="card-title">Pavos Corales Reales</h5>
                           <p class="card-text">Tienen a una Bruja como capitana de la casa, su poder es gigantesco.<br><br>Capitana: Dorothy Unsworth</p>
@@ -109,7 +109,7 @@
                     </div>
                     <div class="col">
                       <div class="card">
-                        <img src="img/Violet_Orca_Insignia.webp" class="card-img-top Caballeria" alt="...">
+                        <img src="Violet_Orca_Insignia.webp" class="card-img-top Caballeria" alt="...">
                         <div class="card-body">
                           <h5 class="card-title">Orcas Moradas</h5>
                           <p class="card-text">Casa donde el capitan anterior traiciono al reino, fuera de eso no hay mucha informacion.<br><br>Capitan: Kaiser Granvorka</p>
